# specflow

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  retrospective.md
.github/workflows/: specflow.yml
.opencode/plans/: story-updates-032-034.md
.qwen/: settings.json
.specflow/: config.yaml  state.yaml
.specflow/baselines/: v0.2.0.yaml  v0.2.1-spec-sync.yaml  v0.3.0-evidence.md  v0.3.0-pre-impl.yaml  v0.3.0.yaml  v0.3.1.yaml  v0.3.2-evidence.md  v0.3.2.yaml
.specflow/checklist-log/: 2026-04-11T13-35-56Z_check-REQ-001.yaml  2026-04-11T13-36-20Z_check-REQ-001.yaml  2026-04-11T13-36-35Z_check-REQ-001.yaml  2026-04-11T13-45-48Z_check-ARCH-001.yaml  2026-04-11T13-45-48Z_check-REQ-001.yaml  2026-04-11T13-45-48Z_check-REQ-002.yaml  2026-04-11T13-45-48Z_check-REQ-003.yaml  2026-04-11T13-45-48Z_check-REQ-004.yaml  2026-04-11T13-45-48Z_check-REQ-005.yaml  2026-04-11T13-45-49Z_check-ARCH-002.yaml  2026-04-11T13-45-49Z_check-ARCH-003.yaml  2026-04-11T13-45-49Z_check-DDD-001.yaml  2026-04-11T13-45-49Z_check-DDD-002.yaml  2026-04-11T13-45-49Z_check-DDD-003.yaml  2026-04-11T13-45-49Z_check-STORY-001.yaml  2026-04-11T13-45-49Z_check-STORY-002.yaml  2026-04-11T13-45-49Z_check-STORY-003.yaml  2026-04-11T13-45-49Z_check-STORY-004.yaml  2026-04-11T13-45-49Z_check-STORY-005.yaml  2026-04-11T13-45-49Z_check-STORY-006.yaml  2026-04-11T13-45-49Z_check-STORY-007.yaml  2026-04-11T13-45-49Z_check-STORY-008.yaml  2026-04-11T13-45-49Z_check-STORY-009.yaml  2026-04-11T13-45-49Z_check-STORY-010.yaml  2026-04-11T13-45-49Z_check-STORY-011.yaml  2026-04-11T13-45-49Z_check-STORY-012.yaml  2026-04-11T13-45-49Z_check-STORY-013.yaml  2026-04-11T13-45-49Z_check-STORY-014.yaml  2026-04-11T13-45-49Z_check-STORY-015.yaml  2026-04-11T13-45-49Z_check-STORY-016.yaml  2026-04-11T13-45-49Z_check-STORY-017.yaml  2026-04-11T13-45-49Z_check-STORY-018.yaml  2026-04-11T13-45-49Z_check-STORY-019.yaml  2026-04-11T13-45-49Z_check-STORY-020.yaml  2026-04-11T14-11-45Z_check-REQ-001.yaml
docs/: architecture.md  authoring-a-pack.md  authoring-an-adapter.md  cli-reference.md  commands.md  decisions.md  getting-started.md  lifecycle.md  plan.md  skill-standards.md  team-setup.md
scripts/: artifact-lint-fingerprints.sh  artifact-lint-gate.sh  artifact-lint-ids.sh  artifact-lint-links.sh  artifact-lint-schema.sh  artifact-lint-status.sh  change-impact.sh  check-acceptance-criteria.sh  check.sh  checklist-run-acceptance.sh  checklist-run.sh  compliance.sh  done.sh  fingerprint-refresh.sh  go.sh  hook.sh  impact.sh  rebuild-index.sh  renumber-drafts.sh  sequence.sh  split.sh  tweak.sh  unlock.sh  validate-fingerprints.sh  validate-gate.sh  validate-ids.sh  validate-links.sh  validate-schema.sh  validate-status.sh  validate.sh
tests/: test_artifact_lint.py  test_artifacts.py  test_baselines.py  test_cli_commands.py  test_evidence.py  test_generate_tests.py  test_optional_types.py  test_quality_lint.py  test_rbac.py  test_reqif_roundtrip.py  test_standards.py  test_status_coverage.py
(+1073 files in other folders)
